Fix z-index issue

--- a/static/css/layouts/gallery/modal.css
+++ b/static/css/layouts/gallery/modal.css
@@ -8,7 +8,7 @@
   display: none;
   background-color: var(--content-background-dark);
   animation: fadein 0.2s;
-  z-index: 2;
+  z-index: 1;
 }
 #layout-single.layout-gallery-single .modal-body {
   position: fixed;
